[package]
name = "z-spin-engine"
version = "0.1.0"
edition = "2021"
description = "WebAssembly Tetris engine"
license = "MIT"
repository = "https://github.com/example/z-spin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Only include rayon for non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = 3
lto = true 